2008-10-15  Marco Barisione  <marco.barisione@collabora.co.uk>

Reviewed by Holger Freyther.

        http://bugs.webkit.org/show_bug.cgi?id=21211
        [CURL] Upload doesn't work because cancel is called

        FormDataStream::read returns 0 when retrieving data from the form
        fails, but also when there is no more data to send. This means that
        ResourceHandleManager::cancel is always called even when the data was
        successfully sent.

        Check if there are more elements in the form before calling
        FormDataStream::read.

        * platform/network/curl/FormDataStreamCurl.cpp:
        (WebCore::FormDataStream::hasMoreElements):
        * platform/network/curl/FormDataStreamCurl.h:
        * platform/network/curl/ResourceHandleManager.cpp:
        (WebCore::readCallback):


Canonical link: https://commits.webkit.org/29851@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@37613 268f45cc-cd09-0410-ab3c-d52691b4dbfc